[upstream] PS-5966: Bug #90351 Fixed drifting status variables values

https://jira.percona.com/browse/PS-5966

Fixing by skipping already aggregated thread status variables when query for global status variables is invoked.
Variables may be already aggregated, but thread can be still alive after aggregation in sql_class.cc THD::release_resources()

PS-6052: gcc 9.2.1 reports new warnings

PS-6054: clang 5.0.1 reports "missing-braces" warnings